Fixed spacing on top

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,6 @@ header, footer {
 header {
   top: 0;
   margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 footer {
